test/langtools/tools/javac/patterns/DefaultClauseMustBeLast.out
DefaultClauseMustBeLast.java:11:13: compiler.err.pattern.dominated
DefaultClauseMustBeLast.java:16:13: compiler.err.pattern.dominated
2 errors
